--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,33 @@
     <meta name="description" content="Web site created with code lol" />
     <link rel="apple-touch-icon" href="logo.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+    <script>
+    var setVanta = ()=>{
+      if (window.VANTA) window.VANTA.NET({
+        el: "#bg-animated",
+        mouseControls: true,
+        touchControls: true,
+        gyroControls: false,
+        scale: 1.00,
+        scaleMobile: 1.00
+      })
+    }
+    _strk.push(function() {
+      setVanta()
+      window.edit_page.Event.subscribe( "Page.beforeNewOneFadeIn", setVanta )
+    })
+    </script>
+
+
     <title>Raj Panjabi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    
     <div id="root"></div>
   </body>
 </html>
