--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
         scaleMobile: 1.00
       })
     }
-    _strk.push(function() {
-      setVanta()
-      window.edit_page.Event.subscribe( "Page.beforeNewOneFadeIn", setVanta )
-    })
+    // _strk.push(function() {
+    //   setVanta()
+    //   window.edit_page.Event.subscribe( "Page.beforeNewOneFadeIn", setVanta )
+    // })
     </script>
 
 
